# Copyright 2009 Google Inc. All Rights Reserved.

load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//:soy_internal"])

java_library(
    name = "basicdirectives",
    srcs = glob(["*.java"]),
    deps = [
        "//java/src/com/google/template/soy/data",
        "//java/src/com/google/template/soy/data:unsafesanitizedcontentordainer",
        "//java/src/com/google/template/soy/internal/targetexpr",
        "//java/src/com/google/template/soy/jbcsrc/restricted",
        "//java/src/com/google/template/soy/jssrc/restricted",
        "//java/src/com/google/template/soy/pysrc/restricted",
        "//java/src/com/google/template/soy/shared/internal:escaping_library",
        "//java/src/com/google/template/soy/shared/internal:short_circuitable",
        "//java/src/com/google/template/soy/shared/restricted",
        "//java/src/com/google/template/soy/types",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:org_ow2_asm_asm",
    ],
)
