# Copyright 2009 Google Inc. All Rights Reserved.

load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//:soy_internal"])

java_library(
    name = "basicfunctions",
    srcs = glob(["*.java"]),
    deps = [
        "//java/src/com/google/template/soy/data",
        "//java/src/com/google/template/soy/internal/base",
        "//java/src/com/google/template/soy/plugin/java/restricted",
        "//java/src/com/google/template/soy/plugin/javascript/restricted",
        "//java/src/com/google/template/soy/plugin/python/restricted",
        "//java/src/com/google/template/soy/plugin/restricted",
        "//java/src/com/google/template/soy/shared/internal:escaping_library",
        "//java/src/com/google/template/soy/shared/restricted",
        "//java/src/com/google/template/soy/shared/restricted:method_annotation",
        "@maven//:com_google_guava_guava",
    ],
)
