##
# Copyright 2019 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
##

load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//:soy_internal"])

java_library(
    name = "coredirectives",
    srcs = glob(["*.java"]),
    deps = [
        "//java/src/com/google/template/soy/data",
        "//java/src/com/google/template/soy/data:unsafesanitizedcontentordainer",
        "//java/src/com/google/template/soy/jbcsrc/restricted",
        "//java/src/com/google/template/soy/jssrc/restricted",
        "//java/src/com/google/template/soy/pysrc/restricted",
        "//java/src/com/google/template/soy/shared/internal:escaping_library",
        "//java/src/com/google/template/soy/shared/internal:short_circuitable",
        "//java/src/com/google/template/soy/shared/restricted",
        "//java/src/com/google/template/soy/types",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_code_findbugs_jsr305",
    ],
)
