##
# Copyright 2019 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
##

load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//:soy_internal"])

SEMI_PUBLIC_SOURCES = [
    "SoyError.java",
    "SoyErrors.java",
    "SoyErrorKind.java",
    "ErrorArg.java",
    "ErrorFormatter.java",
]

PUBLIC_SOURCES = [
    "SoyCompilationException.java",
]

FORMATTER_SRCS = [
    "ErrorFormatterImpl.java",
]

METRIC_SRCS = [
    "MetricReporter.java",
]

java_library(
    name = "soy_error_api",
    srcs = SEMI_PUBLIC_SOURCES,
    deps = [
        "//java/src/com/google/template/soy/base",
        "//src/main/protobuf:soy_compiler_metrics_java_proto",
        "@com_google_auto_value_auto_value",
        "@com_google_protobuf//:protobuf_java",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "formatter",
    srcs = FORMATTER_SRCS,
    deps = [
        ":error_reporter_impl",
        ":soy_error_api",
        "//java/src/com/google/template/soy/base",
        "//java/src/com/google/template/soy/base/internal",
        "//java/src/com/google/template/soy/soytree",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "error",
    srcs = PUBLIC_SOURCES,
    visibility = ["//visibility:public"],
    deps = [
        ":soy_error_api",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "error_reporter_impl",
    srcs = glob(
        ["*.java"],
        exclude = PUBLIC_SOURCES + SEMI_PUBLIC_SOURCES + METRIC_SRCS,
    ),
    visibility = ["//visibility:private"],
    deps = [
        ":soy_error_api",
        "//java/src/com/google/template/soy/base",
        "//java/src/com/google/template/soy/base/internal",
        "@com_google_auto_value_auto_value",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "error_reporter",
    exports = [
        ":error",
        ":error_reporter_impl",
        ":soy_error_api",
    ],
)

java_library(
    name = "metric_reporter",
    srcs = ["MetricReporter.java"],
    deps = [
        ":error_reporter",
        "//java/src/com/google/template/soy/base",
        "//java/src/com/google/template/soy/base/internal",
        "//src/main/protobuf:diagnostic_category_java_proto",
        "//src/main/protobuf:soy_compiler_metrics_java_proto",
        "@maven//:com_google_guava_guava",
    ],
)
