##
# Copyright 2019 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
##

load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//:soy_internal"])

java_library(
    name = "i18ndirectives",
    srcs = glob(["*.java"]),
    deps = [
        "//java/src/com/google/template/soy/data",
        "//java/src/com/google/template/soy/plugin/java/restricted",
        "//java/src/com/google/template/soy/plugin/javascript/restricted",
        "//java/src/com/google/template/soy/plugin/python/restricted",
        "//java/src/com/google/template/soy/plugin/restricted",
        "//java/src/com/google/template/soy/pysrc/restricted",
        "//java/src/com/google/template/soy/shared/restricted",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:com_ibm_icu_icu4j",
    ],
)
