##
# Copyright 2019 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
##

load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//:soy_internal"])

OPTIONS_SRCS = ["SoyIdomSrcOptions.java"]

java_library(
    name = "options",
    srcs = OPTIONS_SRCS,
    visibility = ["//visibility:public"],
    deps = [
        "//java/src/com/google/template/soy/base/internal",
        "//java/src/com/google/template/soy/jssrc",
        "@com_google_auto_value_auto_value",
    ],
)

java_library(
    name = "idomsrc",
    srcs = glob(
        ["*.java"],
        exclude = OPTIONS_SRCS,
    ),
    deps = [
        ":options",
        "//java/src/com/google/template/soy/base",
        "//java/src/com/google/template/soy/base/internal",
        "//java/src/com/google/template/soy/basetree",
        "//java/src/com/google/template/soy/data",
        "//java/src/com/google/template/soy/error:error_reporter",
        "//java/src/com/google/template/soy/exprtree",
        "//java/src/com/google/template/soy/internal/base",
        "//java/src/com/google/template/soy/internal/i18n",
        "//java/src/com/google/template/soy/javagencode:kythe",
        "//java/src/com/google/template/soy/jssrc",
        "//java/src/com/google/template/soy/jssrc/dsl",
        "//java/src/com/google/template/soy/jssrc/internal",
        "//java/src/com/google/template/soy/jssrc/restricted",
        "//java/src/com/google/template/soy/jssrc/restricted:internal",
        "//java/src/com/google/template/soy/logging:public",
        "//java/src/com/google/template/soy/passes",
        "//java/src/com/google/template/soy/shared/internal",
        "//java/src/com/google/template/soy/shared/internal:builtin_function",
        "//java/src/com/google/template/soy/shared/restricted",
        "//java/src/com/google/template/soy/soytree",
        "//java/src/com/google/template/soy/soytree:metadata",
        "//java/src/com/google/template/soy/soytree:metadata_impl",
        "//java/src/com/google/template/soy/soytree:soynode",
        "//java/src/com/google/template/soy/soytree/defn",
        "//java/src/com/google/template/soy/types",
        "@com_google_protobuf//:protobuf_java",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_common_html_types_types",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)
