load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//:soy_internal"])

java_library(
    name = "jbcsrc",
    srcs = glob(["*.java"]),
    deps = [
        "//java/src/com/google/template/soy/base",
        "//java/src/com/google/template/soy/base/internal",
        "//java/src/com/google/template/soy/basetree",
        "//java/src/com/google/template/soy/data",
        "//java/src/com/google/template/soy/error:error_reporter",
        "//java/src/com/google/template/soy/exprtree",
        "//java/src/com/google/template/soy/internal/proto",
        "//java/src/com/google/template/soy/jbcsrc/internal",
        "//java/src/com/google/template/soy/jbcsrc/restricted",
        "//java/src/com/google/template/soy/jbcsrc/runtime",
        "//java/src/com/google/template/soy/jbcsrc/shared",
        "//java/src/com/google/template/soy/jbcsrc/shared:names",
        "//java/src/com/google/template/soy/logging:internal",
        "//java/src/com/google/template/soy/logging:public",
        "//java/src/com/google/template/soy/msgs",
        "//java/src/com/google/template/soy/msgs/internal",
        "//java/src/com/google/template/soy/plugin/internal",
        "//java/src/com/google/template/soy/plugin/java/internal",
        "//java/src/com/google/template/soy/plugin/java/restricted",
        "//java/src/com/google/template/soy/shared",
        "//java/src/com/google/template/soy/shared/internal:builtin_function",
        "//java/src/com/google/template/soy/shared/internal:builtin_method",
        "//java/src/com/google/template/soy/shared/restricted",
        "//java/src/com/google/template/soy/soytree",
        "//java/src/com/google/template/soy/soytree:soynode",
        "//java/src/com/google/template/soy/soytree/defn",
        "//java/src/com/google/template/soy/types",
        "@com_google_auto_value_auto_value",
        "@com_google_protobuf//:protobuf_java",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_common_html_types_types",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:org_ow2_asm_asm",
        "@maven//:org_ow2_asm_asm_commons",
    ],
)
