# Copyright 2008 Google Inc. All Rights Reserved.

load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//:soy_internal"])

java_library(
    name = "msgs",
    srcs = glob(
        [
            "*.java",
            "restricted/*.java",
        ],
        exclude = ["SoyMsgIdConverter.java"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//java/src/com/google/template/soy/base",
        "//java/src/com/google/template/soy/error:error_reporter",
        "//java/src/com/google/template/soy/internal/i18n",
        "@com_google_auto_value_auto_value",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_ibm_icu_icu4j",
    ],
)

java_library(
    name = "msg_id_converter",
    srcs = ["SoyMsgIdConverter.java"],
    visibility = ["//visibility:public"],
    deps = ["@maven//:com_google_guava_guava"],
)
