# Copyright 2009 Google Inc. All Rights Reserved.

load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//:soy_internal"])

java_library(
    name = "parseinfo",
    deprecation = "Soy Info objects are deprecated, use the invocation builder API instead.",
    visibility = ["//visibility:public"],
    exports = [":impl"],
)

java_library(
    name = "impl",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:private"],
    deps = [
        "@com_google_protobuf//:protobuf_java",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)
