##
# Copyright 2019 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
##

load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//:soy_internal"])

NAME_SRC = ["TemplateName.java"]

java_library(
    name = "parseinfo",
    deprecation = "Soy Info objects are deprecated, use the invocation builder API instead.",
    visibility = ["//visibility:public"],
    exports = [":impl"],
)

java_library(
    name = "impl",
    srcs = glob(
        ["*.java"],
        exclude = NAME_SRC,
    ),
    visibility = ["//visibility:private"],
    deps = [
        ":name",
        "@com_google_protobuf//:protobuf_java",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "name",
    srcs = NAME_SRC,
    visibility = ["//visibility:public"],
    deps = [
        "//java/src/com/google/template/soy/data:template",
        "@com_google_auto_value_auto_value",
        "@maven//:com_google_errorprone_error_prone_annotations",
    ],
)
