load("@rules_java//java:defs.bzl", "java_library")

package(default_visibility = ["//:soy_internal"])

java_library(
    name = "passes",
    srcs = glob(["*.java"]),
    deps = [
        "//java/src/com/google/template/soy/base",
        "//java/src/com/google/template/soy/base/internal",
        "//java/src/com/google/template/soy/basetree",
        "//java/src/com/google/template/soy/basicfunctions",
        "//java/src/com/google/template/soy/conformance",
        "//java/src/com/google/template/soy/css",
        "//java/src/com/google/template/soy/data",
        "//java/src/com/google/template/soy/data/internalutils",
        "//java/src/com/google/template/soy/error:error_reporter",
        "//java/src/com/google/template/soy/exprtree",
        "//java/src/com/google/template/soy/internal/proto",
        "//java/src/com/google/template/soy/logging:internal",
        "//java/src/com/google/template/soy/logging:public",
        "//java/src/com/google/template/soy/msgs/internal",
        "//java/src/com/google/template/soy/parsepasses/contextautoesc",
        "//java/src/com/google/template/soy/passes/htmlmatcher",
        "//java/src/com/google/template/soy/plugin/java/internal",
        "//java/src/com/google/template/soy/plugin/java/restricted",
        "//java/src/com/google/template/soy/plugin/restricted",
        "//java/src/com/google/template/soy/shared",
        "//java/src/com/google/template/soy/shared/internal",
        "//java/src/com/google/template/soy/shared/internal:builtin_function",
        "//java/src/com/google/template/soy/shared/internal:builtin_method",
        "//java/src/com/google/template/soy/shared/internal:deltemplate_selector",
        "//java/src/com/google/template/soy/shared/internal:escaping_library",
        "//java/src/com/google/template/soy/shared/restricted",
        "//java/src/com/google/template/soy/shared/restricted:method_annotation",
        "//java/src/com/google/template/soy/sharedpasses/opti",
        "//java/src/com/google/template/soy/soyparse",
        "//java/src/com/google/template/soy/soytree",
        "//java/src/com/google/template/soy/soytree:soynode",
        "//java/src/com/google/template/soy/soytree/defn",
        "//java/src/com/google/template/soy/types",
        "//java/src/com/google/template/soy/types/ast",
        "//src/main/protobuf:template_metadata_java_proto",
        "@com_google_protobuf//:protobuf_java",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
    ],
)
